# api/jsonapi.go
@@ -950,8 +950,8 @@ func (i *jsonAPIHandler) POSTLogin(w http.ResponseWriter, r *http.Request) {
 
 func (i *jsonAPIHandler) GETInventory(w http.ResponseWriter, r *http.Request) {
 	type inv struct {
-		Slug  string `json:"slug"`
-		Count int    `json:"count"`
+		Slug     string `json:"slug"`
+		Quantity int    `json:"quantity"`
 	}
 	var invList []inv
 	inventory, err := i.node.Datastore.Inventory().GetAll()
@@ -972,8 +972,8 @@ func (i *jsonAPIHandler) GETInventory(w http.ResponseWriter, r *http.Request) {
 
 func (i *jsonAPIHandler) POSTInventory(w http.ResponseWriter, r *http.Request) {
 	type inv struct {
-		Slug  string `json:"slug"`
-		Count int    `json:"count"`
+		Slug     string `json:"slug"`
+		Quantity int    `json:"quantity"`
 	}
 	decoder := json.NewDecoder(r.Body)
 	var invList []inv
@@ -983,7 +983,7 @@ func (i *jsonAPIHandler) POSTInventory(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	for _, in := range invList {
-		err := i.node.Datastore.Inventory().Put(in.Slug, in.Count)
+		err := i.node.Datastore.Inventory().Put(in.Slug, in.Quantity)
 		if err != nil {
 			ErrorResponse(w, http.StatusInternalServerError, err.Error())
 			return
